# disnake

./: .codespellignore  .coverage  .flake8  .gitattributes  .gitignore  .libcst.codemod.yaml  .pdm-python  .pre-commit-config.yaml  .readthedocs.yml  .replit  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.ja.rst  README.md  README.rst  RELEASE.md  RELEASING.md  builder.py  coverage.xml  hatch_build.py  noxfile.py  pdm_build.py  pre-commit-test.py  pyproject.toml  pyvenv.cfg  requirements.txt  requirements_dev.txt  setup.py  task.env  test_launcher.py
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-release.yaml  changelog.yaml  check-pull-labels.yaml  ci.yml  create-release-pr.yaml  crowdin-upload.yml  docs.yml  lint-test.yml  lint.yml  pre-commit.yml  release.yaml  semantic-pr-title.yml  semantic-pr-yitle.yml  test.yml  validate-pr.yml
Scripts/: activate  activate.bat
changelog/: 1002.feature.rst  1003.feature.rst  1004.feature.rst  1005.misc.rst  1006.feature.rst  1008.bugfix.rst  1009.bugfix.rst  1011.feature.rst  1012.feature.rst  1013.bugfix.rst  1014.feature.rst  1015.feature.rst  1017.feature.rst  1018.bugfix.rst  1020.misc.rst  1025.feature.rst  1027.bugfix.rst  1029.bugfix.rst  1030.bugfix.rst  1033.doc.rst  1035.deprecate.rst  1036.feature.rst  1039.doc.rst  1040.feature.rst  1041.feature.rst  1044.feature.rst  1045.bugfix.rst  1045.feature.rst  1046.feature.rst  1047.bugfix.rst  1050.feature.rst  1051.bugfix.rst  1056.doc.rst  1058.bugfix.rst  1062.feature.rst  1068.feature.0.rst  1068.feature.1.rst  1068.feature.rst  1069.feature.rst  1073.feature.rst  (+598 more)
changes/: 435.breaking.rst  462.breaking.rst  471.breaking.rst  540.doc.rst  542.doc.rst  548.breaking.rst  549.bugfix.rst  554.misc.rst  558.feature.rst  560.breaking.rst  563.typing.rst  568.bugfix.rst  571.feature.rst  572.bugfix.rst  574.feature.rst  580.breaking.rst  583.breaking.rst  586.feature.rst  588.typing.rst  593.feature.0.rst  593.feature.1.rst  README.rst  _template.rst
discord/: __init__.py  __main__.py  abc.py  activity.py  app_commands.py  appinfo.py  asset.py  audit_logs.py  backoff.py  channel.py  client.py  colour.py  components.py  context_managers.py  embeds.py  emoji.py  enums.py  errors.py  file.py  flags.py  gateway.py  guild.py  http.py  integrations.py  invite.py  iterators.py  member.py  mentions.py  message.py  mixins.py  object.py  oggparse.py  opus.py  partial_emoji.py  party.py  permissions.py  player.py  raw_models.py  reaction.py  role.py  (+12 more)
discord/ext/: commands.py
discord/interactions/: __init__.py  application_command.py  base.py  message.py
discord/types/: __init__.py  activity.py  appinfo.py  audit_log.py  channel.py  components.py  embed.py  emoji.py  gateway.py  guild.py  integration.py  interactions.py  invite.py  member.py  message.py  raw_models.py  role.py  snowflake.py  sticker.py  team.py  template.py  threads.py  user.py  voice.py  webhook.py  welcome_screen.py  widget.py
discord/ui/: __init__.py  button.py  item.py  select.py  view.py
discord/webhook/: __init__.py  async_.py  sync.py
disnake/: #client.py#  #state.py#  .libcst.codemod.yaml  .readthedocs.yml  LICENSE  __init__.py  __main__.py  _event_data.py  _hub.py  _version.py  _version.pyi  abc.py  activity.py  app_commands.py  appinfo.py  application_role_connection.py  asset.py  audit_logs.py  auto_moderation.py  automod.py  backoff.py  bans.py  channel.py  client.py  colour.py  components.py  context_managers.py  custom_warnings.py  discovery.py  embeds.py  emoji.py  entitlement.py  enums.py  errors.py  file.py  flags.py  gateway.py  guild.py  guild_preview.py  guild_scheduled_event.py  (+41 more)
disnake/.github/: PULL_REQUEST_TEMPLATE.md
disnake/disnake/: app_commands.py  bans.py  colour.py  guild_preview.py  guild_scheduled_event.py  reaction.py  role.py  sticker.py  team.py  voice_region.py
disnake/docs/: Makefile  discord.rst  index.rst  make.bat  migrating_to_async.rst  quickstart.rst
disnake/examples/: basic_bot.py  converters.py  custom_context.py  user_echo_webhook.py
disnake/interactions/: __init__.py  application_command.py  base.py  message.py  modal.py
disnake/tests/: test_events.py  test_http.py  test_object.py  test_role_gradient.py
disnake/types/: __init__.py  activity.py  appinfo.py  application_role_connection.py  audit_log.py  auto_moderation.py  automod.py  channel.py  components.py  discovery.py  embed.py  emoji.py  entitlement.py  gateway.py  guild.py  (+24 more)
docs/: .ruff.toml  404.rst  Makefile  api.rst  build.bat  conf.py  contributing.rst  crowdin.yml  discord.rst  faq.rst  index.rst  intents.rst  intro.rst  logging.rst  make.bat  migrating.rst  migrating_to_async.rst  quickstart.rst  test.html  version_guarantees.rst  whats_new.rst  whats_new_legacy.rst
examples/: .ruff.toml  background_task.py  background_task_asyncio.py  basic_bot.py  basic_voice.py  components_v2.py  context_menu_example.py  converters.py  custom_context.py  deleted.py  edit_delete.py  edits.py  guessing_game.py  localizations.py  low_level_components.py  modal.py  new_member.py  option_choice.py  prefix_command_example.py  reaction_roles.py  recieve_vc_audio.py  reply.py  ruff.toml  secret.py  slash_command_example.py  user_echo_webhook.py
requirements/: requirements_dev.txt  requirements_docs.txt  requirements_speed.txt  requirements_tools.txt  requirements_voice.txt
scripts/: __init__.py  bootstrap.py  cog_special_methods.py  kwarg_permissions.py  new_typehints.py  overloads_no_missing.py  pep585_docstrings.py  versioning.py
test_bot/: __init__.py  __main__.py  config.py  example.env  main.py
tests/: helpers.py  main.py  test_abc.py  test_activity.py  test_client.py  test_color.py  test_colour.py  test_embeds.py  test_enums.py  test_events.py  test_flags.py  test_http.py  test_mentions.py  test_message.py  test_object.py  test_onboarding.py  test_permissions.py  test_role_gradient.py  test_utils.py  utils_helper_module.py
(+390 files in other folders)
