# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling>=1.27.0", "versioningit>=3.3.0,<4", "packaging"]
build-backend = "hatchling.build"

[project]
name = "disnake"
description = "A Python wrapper for the Discord API"
readme = "README.md"
authors = [
  { name = "Disnake Development" }
]
requires-python = ">=3.10"
keywords = ["disnake", "discord", "discord api"]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "aiohttp>=3.7.0,<4.0",
    "typing-extensions>=4.1",
    "yarl>=1.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    # it is important that the python classifiers are sorted in the sequential order
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Changelog = "https://docs.disnake.dev/page/whats_new.html"
Documentation = "https://docs.disnake.dev/"
Repository = "https://github.com/DisnakeDev/disnake"

[project.optional-dependencies]
speed = [
    "orjson~=3.6",
    "aiohttp[speedups]",
]
voice = [
    "PyNaCl>=1.5.0,<1.7",
    "dave.py~=0.1.1",
    'audioop-lts>=0.2.1; python_version >= "3.13"',
]

[dependency-groups]
dev   = [
    { include-group = "tools" },
    { include-group = "nox" },
    { include-group = "codemod" },
    { include-group = "typing" },
    { include-group = "test" },
    { include-group = "build" },
    { include-group = "docs" },
]
nox = [
    # note: nox should be synced with nox.needs_version in noxfile.py
    # and the pinned nox version in noxfile.py must be within these bounds
    "nox>=2025.5.1",
]
ruff = [
    "ruff==0.14.5",
]
tools = [
    "prek>=0.2.0",
    "slotscheck==0.19.1",
    "check-wheel-contents~=0.6.3",
    { include-group = "ruff" },
]
changelog = [
    "towncrier==23.6.0",
]
codemod = [
    # run codemods on the repository (mostly automated typing)
    "libcst==1.8.5",
    "autotyping==24.9.0",
    { include-group = "ruff" },
]
typing = [
    # this is not pyright itself, but the python wrapper
    "pyright==1.1.405",
    # all type-check only dependencies are defined in noxfile.py.
]
test = [
    "pytest~=8.4.2",
    "pytest-cov~=7.0",
    "pytest-asyncio~=0.24.0",
    "looptime~=0.2.0",
    "coverage[toml]~=7.10.0",
]
build = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "versioningit>=3.3.0,<4",
]
docs = [
    "sphinx==7.0.1",
    "docutils>=0.18.1",
    "sphinxcontrib-trio~=1.1.2",
    "sphinx-hoverxref==1.3.0",
    "sphinx-autobuild~=2021.3",
    "sphinxcontrib-towncrier==0.3.2a0",
    "sphinx-notfound-page==0.8.3",
    "sphinxext-opengraph==0.9.1",
    "versioningit>=3.3.0,<4",
    { include-group = "changelog" },
]

[tool.uv]
required-version = ">=0.9.2"

[tool.hatch.build]
artifacts = ["disnake/_version.py"]

[tool.hatch.build.targets.sdist]
only-include = [
    "disnake",
    "scripts/versioning.py",
]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe:tags,match=v*)$"

[tool.versioningit.format]
distance = "{base_version}a{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{base_version}a{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.versioningit.template-fields]
method = { module = "scripts.versioning", value = "template_fields"}

[tool.versioningit.write]
file = "disnake/_version.py"
template = """
# SPDX-License-Identifier: MIT

from typing import Literal, NamedTuple

__version__ = "{version}"


class VersionInfo(NamedTuple):
    major: int
    minor: int
    micro: int
    releaselevel: Literal["alpha", "beta", "candidate", "final"]
    serial: int

version_info: VersionInfo = VersionInfo{version_tuple}
"""


[tool.ruff]
line-length = 100

[tool.codespell]
skip = ['docs/_static/**', '*.po']
ignore-words-list = ['GroupT', "OT",]

[tool.ruff.lint]
future-annotations = true
select = ["ALL"]
ignore = [
    ## eradicate
    "ERA", # most of our commented-out code is excluded
    ## flake8-annotations
    "ANN0",
    "ANN4",
    ## flake8-bandit
    "S101", # use of assert is fine
    "S311", # use of random is fine in most cases
    "S603", # calling subprocess with dynamic arguments is generally fine, the only way to avoid this is ignoring it
    "S607", # partial executable paths (i.e. "git" instead of "/usr/bin/git") are fine
    "S110", # ignore try-except-pass. Bare excepts are caught with E722
    ## flake8-blind-except
    "BLE", # similar to S110, but also flags Exception
    ## flake8-boolean-trap
    "FBT", # at some point we should make booleans keyword only
    ## flake8-commas
    "COM812", # mostly managed by the formatter
    ## flake8-fixme
    "FIX", # TODO: what the name says!
    ## flake8-no-pep420
    "INP001", # Ha.
    ## flake8-pie
    "PIE790", # TODO: removes pass or ... when there is a docstring
    ## flake8-print
    "T201", # TODO: disabled until the library configures logging
    ## flake8-pyi
    "PYI", # TODO: enable, in separate PR (most have autofixes)
    ## flake8-return
    "RET505", "RET506", # not likely to be enabled
    ## flake8-self
    "SLF", # private member access, this is unlikely to be enabled.
    ## flake8-simplify
    "SIM105", # TODO: enable, most have autofixes.
    "SIM108", # too opinionated.
    ## flake8-tidy-imports
    "TID252", # we still use relative imports
    ## flake8-todos
    "TD", # similar to flake8-fixme, though they may conflict
    ## flake8-typechecking
    "TC001", # typing-only first party import
    "TC002", # typing only third party import
    "TC003", # typing only standard library import
    ## flake8-unused-arguments
    "ARG", # most unused arguments are intentional
    ## flake8-use-pathlib
    "PTH", # TODO: enable in separate PR
    ## mccabe
    "C90",
    ## pep8-naming
    "N", # too specific for now
    ## Perflint
    "PERF203", # try, except within loops; # TODO: refactor
    "PERF401", # TODO: enable!
    ## pycodestyle
    "E501", # lines too long
    "E731", # lambda expression assigned
    ## pydocstyle
    "D1", "D205", "D400", "D401",
    ## Pylint
    # PLC
    "PLC0105",
    "PLC0414",
    "PLC0415",
    "PLR",
    # PLW
    "PLW1641",
    "PLW2901",
    ## Ruff-specific rules
    "RUF006", # not actually sure this is a bug at all...
    "RUF022", # TODO: consider enabling
    "RUF023", # TODO: consider enabling
    ## tryceratops
    "TRY003", # as of 0.12.11 still has some false positives
    "TRY301", # TODO: enable
    "TRY300", # TODO: enable
]

[tool.ruff.lint.per-file-ignores]
"disnake/*.py" = [
    "F403", # Pyflakes: allow star imports
]
"disnake/client.py" = ["T201"]
## examples
"examples/*.py" = [
    "ANN", # missing type annotations in examples is fine
    "B008", # do not perform function calls in argument defaults, this is how most commands work
    "E741", # allow ambiguous variable names
    "EM", # allow Exception("text") for simplicity
    "S104", # flake8-bandit: allow binding to all interfaces
    "T201", # print found, printing is okay in examples
]
"examples/basic_voice.py" = ["S104"] # possible binding to all interfaces

## scripts
"scripts/*.py" = [
    "S101", # flake8-bandit: allow scripts to use assertions
]
"scripts/ci/*.py" = [
    "T20", # allow print temporarily before shifting to logging
]

## tests
"!tests/*" = [ "PT" ] # enable PT in only the tests directory
"tests/*.py" = [
    "E741", # ambiguous variable names
    "S101", # flake8-bandit: allow tests to use assertions
    "PT030", # to be enabled: allow pytest.warns without a match parameter
]
"noxfile.py" = ["EXE003"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "disnake.ext.commands.inject",
    "disnake.ext.commands.Param",
    "disnake.webhook.async_.AsyncWebhookAdapter",
]

[tool.ruff.lint.flake8-builtins]
ignorelist = [
    "id",
    "type",
    "copyright",
    "format",

    # TODO: remove
    "globals",
    "locals",
]

[tool.ruff.lint.flake8-errmsg]
max-string-length = 0

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"subprocess".msg = "Consider possible security implications associated with the subprocess module." # replaces S404

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.towncrier]
template = "changelog/_template.rst.jinja"
package = "disnake"
filename = "docs/whats_new.rst"
directory = "changelog/"
title_format = false
underlines = "-~"
issue_format = ":issue:`{issue}`"

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "deprecate"
    name = "Deprecations"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "New Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "doc"
    name = "Documentation"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Miscellaneous"
    showcontent = true


[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = false
exclude-modules = '''
(
    ^disnake\.types\.
)
'''


[tool.pyright]
typeCheckingMode = "strict"
include = [
    "disnake",
    "docs",
    "examples",
    "scripts",
    "tests",
    "*.py",
]
ignore = [
    "disnake/ext/mypy_plugin",
]

# this is one of the diagnostics that aren't enabled by default, even in strict mode
reportUnnecessaryTypeIgnoreComment = true

# prefer "# pyright: ignore[ruleName]" over "# type: ignore"
enableTypeIgnoreComments = false

# it's unlikely that these will ever be enabled
reportOverlappingOverload = false
reportPrivateUsage = false
reportUnnecessaryIsInstance = false
reportFunctionMemberAccess = false
reportMissingTypeStubs = false
reportUnusedFunction = false
reportUnusedClass = false
reportConstantRedefinition = false
reportImportCycles = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false

# TODO: re-enable
# these were added in the upgrade from pyright 1.1.336 to 1.1.405
reportInconsistentOverload = false
reportInvalidTypeVarUse = false

# these are largely due to missing type hints, and make up most of the error count
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportMissingParameterType = false
reportUnknownVariableType = false
reportMissingTypeArgument = false


[tool.pytest.ini_options]
minversion = "8.2"
pythonpath = "." # legacy configuration, new pytest versions don't add the rootdir to path
testpaths = "tests"
addopts = "--strict-markers -Werror -s"
xfail_strict = true
asyncio_mode = "strict"

[tool.coverage.run]
branch = true
include = [
    "disnake/*",
    "tests/*",
]
omit = [
    "disnake/ext/mypy_plugin/*",
    "disnake/types/*",
    "disnake/__main__.py",
]

[tool.coverage.report]
precision = 1
exclude_lines = [
    "# pragma: no cov(er(age)?)?$",
    "^\\s*def __repr__",
    "^\\s*@overload",
    "^\\s*if TYPE_CHECKING",
    "^\\s*raise NotImplementedError$",
    "^\\s*\\.\\.\\.$",
]


[tool.check-wheel-contents]
toplevel = ["disnake"]
package = "disnake"
